# ffxivcombattracker

./: .gitignore  readme.md
ffxiv_combat_tracker_backend/: Cargo.toml
ffxiv_combat_tracker_backend/src/: main.rs
ffxiv_combat_tracker_backend/src/network_utilities/: mod.rs  network_ops.rs
ffxiv_combat_tracker_backend/src/operating_system_utilities/: memory_ops.rs  mod.rs  operating_system_switch.rs
ffxiv_combat_tracker_backend/src/operating_system_utilities/linux_memory/: memory_ops.rs  mod.rs
ffxiv_combat_tracker_frontend/: app.json  package-lock.json  package.json
ffxiv_combat_tracker_frontend/android/: settings.gradle
ffxiv_combat_tracker_frontend/android/app/: build.gradle
ffxiv_combat_tracker_frontend/android/app/src/debug/java/com/ffxiv_combat_tracker_frontend/: ReactNativeFlipper.java
ffxiv_combat_tracker_frontend/android/app/src/main/java/com/ffxiv_combat_tracker_frontend/: MainActivity.java  MainApplication.java
ffxiv_combat_tracker_frontend/android/app/src/main/res/values/: strings.xml
ffxiv_combat_tracker_frontend/ios/: Podfile
ffxiv_combat_tracker_frontend/ios/ffxiv_combat_tracker_frontend/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ffxiv_combat_tracker_frontend/ios/ffxiv_combat_tracker_frontend.xcodeproj/: project.pbxproj
ffxiv_combat_tracker_frontend/ios/ffxiv_combat_tracker_frontend.xcodeproj/xcshareddata/xcschemes/: ffxiv_combat_tracker_frontend.xcscheme
ffxiv_combat_tracker_frontend/ios/ffxiv_combat_tracker_frontendTests/: ffxiv_combat_tracker_frontendTests.m
(+1 files in other folders)
