[package]
name = "ffxiv_combat_tracker_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "."
]

[dependencies]
winapi = "0.3.*"
sysinfo = "0.29.10"
tokio = { version = "1", features = ["full"] }